# LaLiGAN

./: pyproject.toml
src/laliegan/: dataset.py  gan.py  main.py  utils.py
