[project]
name = "laliegan"
version = "0.1.0"
description = "Latent Lie GAN symmetry discovery experiments"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "LaLiGAN contributors" }]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["laliegan"]
py-modules = [
  "autoencoder",
  "dataset",
  "gan",
  "main",
  "main_sindy",
  "parser_utils",
  "sindy",
  "train",
  "utils",
]
